@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.3-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-03 23:22:33, took 00:20:08, with 50 workers, on 4174 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2026-01-03 23:50:17, took 00:12:57, with 50 workers, on 4180 cases, 0 failed, 0 traces, 6 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -469,6 +469,10 @@ http://sources.freertr.org/cfg/conn-redun05.tst;conn-redun05.tst;success;bgp wit
 http://sources.freertr.org/cfg/conn-rlogin.tst;conn-rlogin.tst;success;ppp over rlogin
 http://sources.freertr.org/cfg/conn-sep.tst;conn-sep.tst;success;sep
 http://sources.freertr.org/cfg/conn-slaac.tst;conn-slaac.tst;success;slaac
+http://sources.freertr.org/cfg/conn-smds01.tst;conn-smds01.tst;success;smds encapsulation
+http://sources.freertr.org/cfg/conn-smds02.tst;conn-smds02.tst;success;smds dxi encapsulation
+http://sources.freertr.org/cfg/conn-smds03.tst;conn-smds03.tst;success;smds nec encapsulation
+http://sources.freertr.org/cfg/conn-smds04.tst;conn-smds04.tst;success;smds nec dxi encapsulation
 http://sources.freertr.org/cfg/conn-sreth01.tst;conn-sreth01.tst;success;sreth over ipv4
 http://sources.freertr.org/cfg/conn-sreth02.tst;conn-sreth02.tst;success;sreth over ipv6
 http://sources.freertr.org/cfg/conn-sreth03.tst;conn-sreth03.tst;success;sreth over loopback
@@ -1160,6 +1164,8 @@ http://sources.freertr.org/cfg/intop0-lapb01.tst;intop0-lapb01.tst;success;inter
 http://sources.freertr.org/cfg/intop0-lapb02.tst;intop0-lapb02.tst;success;interop0: lapb dce
 http://sources.freertr.org/cfg/intop0-lapb03.tst;intop0-lapb03.tst;success;interop0: lapb mod128
 http://sources.freertr.org/cfg/intop0-ppp.tst;intop0-ppp.tst;success;interop0: ppp
+http://sources.freertr.org/cfg/intop0-smds01.tst;intop0-smds01.tst;success;interop0: smds
+http://sources.freertr.org/cfg/intop0-smds02.tst;intop0-smds02.tst;success;interop0: smds dxi
 http://sources.freertr.org/cfg/intop1-bgp01.tst;intop1-bgp01.tst;success;interop1: ebgp
 http://sources.freertr.org/cfg/intop1-bgp02.tst;intop1-bgp02.tst;success;interop1: ibgp
 http://sources.freertr.org/cfg/intop1-bgp03.tst;intop1-bgp03.tst;success;interop1: bgp locpref
