@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.3-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-03 23:22:33, took 00:20:08, with 50 workers, on 4174 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2026-01-03 23:50:17, took 00:12:57, with 50 workers, on 4180 cases, 0 failed, 0 traces, 6 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -481,6 +481,10 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-rlogin.tst">conn-rlogin.tst</a></td><td>success</td><td>ppp over rlogin</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sep.tst">conn-sep.tst</a></td><td>success</td><td>sep</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-slaac.tst">conn-slaac.tst</a></td><td>success</td><td>slaac</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-smds01.tst">conn-smds01.tst</a></td><td>success</td><td>smds encapsulation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-smds02.tst">conn-smds02.tst</a></td><td>success</td><td>smds dxi encapsulation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-smds03.tst">conn-smds03.tst</a></td><td>success</td><td>smds nec encapsulation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-smds04.tst">conn-smds04.tst</a></td><td>success</td><td>smds nec dxi encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sreth01.tst">conn-sreth01.tst</a></td><td>success</td><td>sreth over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sreth02.tst">conn-sreth02.tst</a></td><td>success</td><td>sreth over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sreth03.tst">conn-sreth03.tst</a></td><td>success</td><td>sreth over loopback</td></tr>
@@ -1172,6 +1176,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-lapb02.tst">intop0-lapb02.tst</a></td><td>success</td><td>interop0: lapb dce</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-lapb03.tst">intop0-lapb03.tst</a></td><td>success</td><td>interop0: lapb mod128</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-ppp.tst">intop0-ppp.tst</a></td><td>success</td><td>interop0: ppp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop0-smds01.tst">intop0-smds01.tst</a></td><td>success</td><td>interop0: smds</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop0-smds02.tst">intop0-smds02.tst</a></td><td>success</td><td>interop0: smds dxi</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-bgp01.tst">intop1-bgp01.tst</a></td><td>success</td><td>interop1: ebgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-bgp02.tst">intop1-bgp02.tst</a></td><td>success</td><td>interop1: ibgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-bgp03.tst">intop1-bgp03.tst</a></td><td>success</td><td>interop1: bgp locpref</td></tr>
